tests/integration/snapshots/integration__conformance__n_object_double_colon.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
{"x"::"b"}
stdout --- 
<empty>
stderr --- 
error: expected json value, found `:`
 --> stdin:1:6
  |
1 | {"x"::"b"}
  |     -^
  |     |
  |     expected due to `:`
