tests/integration/snapshots/integration__conformance__n_object_missing_key.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
{:"b"}
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `}`, found `:`
 --> stdin:1:2
  |
1 | {:"b"}
  | -^
  | |
  | expected due to `{`
